# monster-stock

./: README.md
backend/: api.py  app.py  db.sqlite
backend-rs/: Cargo.toml  docker-compose.yml
backend-rs/migrations/: 20220725043827_lol.sql
backend-rs/src/: main.rs
frontend/src/: View.elm
frontend/src/Pages/: Home_.elm
