[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres","chrono", "macros", "migrate", "json", "time"]}
dotenv = "0.15.0"
anyhow = "1.0.57"
serde = "1.0.137"
chrono = { version = "0.4.19", features = ["serde"] }
